# Furion_C

./: .gitignore  CMakeLists.txt  Furion_C_test.code-workspace  README.md  run.bat
geo_Test/: CMakeLists.txt  g_hole_test.cpp  g_plane_test.cpp  g_tracing_test.h  tool_stderr.cpp  tool_stderr.h
src/: CMakeLists.txt  Furion.cpp  Furion.h  main.cpp
src/display/: furion_plot_sigma.cpp  furion_plot_sigma.h
src/display/MATLAB/: Furion_angle_To_angleproj.m  Furion_intensity_detector.m  Furion_phase_detector.m  Furion_plot_Resolution.m  Furion_plot_Resolution_2_spot.m  color_map_mine.mat  fwhm.m
src/furion_scri/MATLAB/: Fourier_transform_bandwidth.m  Furion_Debyefactor_cal.m  Furion_atomic_read.m  Furion_bragg_cal.m  Furion_complex_refraction.m  Furion_compound_read.m  Furion_crystal_read.m  Furion_diamond_thermal.m  Furion_filepath.m  Furion_formfactor_read.m  Furion_gauss_Inverse_propa.m  Furion_grazing_compound.m  Furion_grazing_incident.m  Furion_multilayer_chi.m  Furion_multilayer_main.m  Furion_perfect_crystal_main.m  Furion_refraction_compound.m  Furion_strucfactor_cal.m  Furion_superstruct_chi.m  Furion_superstruct_main.m  Furion_thermal_Rocking.m  Furion_thick_Rocking.m  Furion_thin_Rocking.m  G1_dose_grazingangle.m  I_xy.mat  Power_density_SS_H  Reflectivity_and_power_hukai.m  S3FEL_VLS_PGM_FEL1.m  S3FEL_VLS_PGM_FEL4.m  S3FEL_beam_size_FEL1_G1.m  S3FEL_beam_size_FEL1_M1.m  S3FEL_beam_size_FEL2_G1.m  S3FEL_beam_size_FEL2_M1.m  S3FEL_beam_size_FEL3_G1.m  S3FEL_beam_size_FEL3_M1.m  S3FEL_beam_size_FEL4_G1.m  S3FEL_beam_size_FEL4_M1.m  S3FEL_cylindrical_premirror_G.m  S3FEL_dose_grazing_G1_FEL2.m  S3FEL_dose_grazing_G1_FEL4.m  (+35 more)
src/gsl/: CONTROL
src/gsl/lib/: gsl.lib  gslcblas.lib
src/import_and_display_srw/MATLAB/: SRW_plot.m  SRW_plot_power_constant.m  import_beam.m
src/optical_element/: Furion_angle_To_angle.cpp  Furion_angle_To_angle.h  Furion_bisection.cpp  Furion_bisection.h  Furion_cylinder_ellipse_Mirror.cpp  Furion_cylinder_ellipse_Mirror.h  Furion_cyliner_parabolic_collimation_Mirror.cpp  Furion_cyliner_parabolic_collimation_Mirror.h  Furion_cyliner_parabolic_focus_Mirror.cpp  Furion_cyliner_parabolic_focus_Mirror.h  Furion_ellipsoid_Mirror.cpp  Furion_ellipsoid_Mirror.h  Furion_hole.cpp  Furion_hole.h  Furion_paraboid_collimation_Mirror.cpp  Furion_paraboid_collimation_Mirror.h  Furion_paraboid_focus_Mirror.cpp  Furion_paraboid_focus_Mirror.h  Furion_plane_Mirror.cpp  Furion_plane_Mirror.h  Furion_slits.cpp  Furion_slits.h  Furion_slits1.cpp  Furion_slits1.h  Furion_spherica_Mirror.cpp  Furion_spherica_Mirror.h  Furion_spherica_cylinder_Mirror.cpp  Furion_spherica_cylinder_Mirror.h  Furion_thin_Lens.cpp  Furion_thin_Lens.h  Furion_toroid_Mirror.cpp  Furion_toroid_Mirror.h  beam.cpp  beam.h  furion_angle_vector.cpp  furion_angle_vector.h  furion_reflect_vector.cpp  furion_reflect_vector.h  furion_rotx.cpp  furion_rotx.h  (+54 more)
src/optical_element/MATLAB/: Furion_angle_To_angle.m  Furion_bisection.m  Furion_cylinder_ellipse_Mirror.m  Furion_cyliner_parabolic_collimation_Mirror.m  Furion_cyliner_parabolic_focus_Mirror.m  Furion_ellipsoid_Mirror.m  Furion_hole.m  Furion_paraboid_collimation_Mirror.m  Furion_paraboid_focus_Mirror.m  Furion_plane_Mirror.m  Furion_roty.m  Furion_slits.m  Furion_slits1.m  Furion_spherica_Mirror.m  Furion_spherica_cylinder_Mirror.m  Furion_thin_Lens.m  Furion_toroid_Mirror.m  beam.m  footprint.m  g_Furion_cylinder_ellipse_Mirror.asv  g_Furion_cyliner_parabolic_collimation_Mirror.m  g_Furion_cyliner_parabolic_focus_Mirror.m  g_Furion_cyliner_spherical_Mirror.m  g_Furion_ellipsoid_Mirror.m  g_Furion_hole.m  g_Furion_paraboid_collimation_Mirror.m  g_Furion_paraboid_focus_Mirror.m  g_Furion_plane_Mirror.m  g_Furion_slits.m  g_Furion_spherical_Mirror.m  g_Furion_toroid_Mirror.m  g_cyliner_parabolic_collimation.m  g_cyliner_parabolic_focus.m  g_ellipsoid.m  (+4 more)
src/propagation/: Furion_angular_spectrum.cpp  Furion_angular_spectrum.h  Furion_fresnel_spatialh.cpp  Furion_fresnel_spatialh.h  Furion_fresnel_spectralh.cpp  Furion_fresnel_spectralh.h  Furion_phase_unwrap2.cpp  Furion_phase_unwrap2.h  fresnel_propagation_mono_2D.cpp  fresnel_propagation_mono_2D.h
src/python_plot/: Furion_plot4_6sigma.py
src/surface/: no_surfe.cpp  no_surfe.h  surfefile_from_shadow.cpp  surfefile_from_shadow.h
(+42 files in other folders)
